Fixed an issue with unvisited links not showing up.

--- a/css/main.css
+++ b/css/main.css
@@ -577,6 +577,9 @@ input.search-form:hover {
   font-size: 24px;
   color: #fff;
 }
+.recent-work-wrap .recent-work-inner h3 a {
+  color: #fff;
+}
 .recent-work-wrap .recent-work-inner h3 a:visited {
   color: #fff;
 }
